src/containers/Home/pages/Signin/Signin.module.scss
.Signin {
  min-height: 100vh;
  max-height: 100vh;
  background: linear-gradient(
    to top right,
    rgb(100 219 222),
    var(--primary-soft)
  );
  display: grid;
  place-items: center;
  background-color: hsl(200deg 33% 98%);

  .SigninBox {
    width: min(30rem, 95vw);
    min-width: fit-content;

    min-height: fit-content;
    height: fit-content;
    min-height: 20rem;

    background-color: var(--primary-light);
    border-radius: 0.5rem;
    box-shadow: 0 0 1rem rgb(215, 215, 216);
    padding: 1rem 2rem;
    .Header {
      font-size: 2rem;
      font-weight: bolder;
      text-align: center;
      margin-bottom: 1rem;
    }
    .InputBox {
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      gap: 1rem;
      margin-bottom: 1rem;

      .InputHolder {
        border-radius: 2rem;

        height: 2.5rem;

        .Input,
        .Input input {
          font-size: 1rem;
          font-weight: 500;
          height: 100%;
        }

        .Input:hover,
        .Input:focus,
        .Input:focus-visible,
        .Input:focus-within {
          border-color: var(--primary-soft);
          //box-shadow: none;
          .PrefixIcon {
            color: var(--primary-hard);
          }
        }

        .Input svg:hover {
          color: var(--primary-hard);
        }
      }
    }
  }
  .Button {
    display: block;
    height: 2.5rem;
    font-weight: bold;
    margin: auto;
    width: 100%;
    border-radius: 2.5rem;
    background: linear-gradient(
      to top right,
      rgb(100 219 222),
      var(--primary-soft)
    );
    text-transform: uppercase;
    &:hover {
      transform: translateY(-3%);
    }
  }

  .Suggestion {
    margin-top: auto;
    .SuggestionText {
    }
    .SuggestionLink {
      color: var(--primary-hard);
      &:hover {
        color: var(--primary-soft);
      }
    }
  }
}

